--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,7 @@
     },
     "idf.espIdfPath": "/home/xjh/esp/v5.2.2/esp-idf",
     "idf.openOcdConfigs": [
-        "interface/ftdi/esp32_devkitj_v1.cfg",
-        "target/esp32.cfg"
+        "board/esp32s3-builtin.cfg"
     ],
     "idf.pythonBinPath": "/home/xjh/.espressif/python_env/idf5.2_py3.10_env/bin/python",
     "idf.toolsPath": "/home/xjh/.espressif",
