--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,9 @@
     "idf.pythonBinPath": "/home/xjh/.espressif/python_env/idf5.2_py3.10_env/bin/python",
     "idf.toolsPath": "/home/xjh/.espressif",
     "files.associations": {
-        "stdio.h": "c"
-    }
+        "stdio.h": "c",
+        "cjson.h": "c"
+    },
+    "idf.flashType": "UART",
+    "idf.port": "/dev/ttyUSB0"
 }
